trybuild-qcell/src/compiletest/tcell-03.stderr
error[E0308]: mismatched types
   --> src/compiletest/tcell-03.rs:17:31
    |
17  |     let c1mutref = owner_b.rw(&*c1);    // Compile error
    |                            -- ^^^^ expected `&TCell<MarkerB, _>`, found `&TCell<MarkerA, u32>`
    |                            |
    |                            arguments to this method are incorrect
    |
    = note: expected reference `&TCell<MarkerB, _>`
               found reference `&TCell<MarkerA, u32>`
note: method defined here
   --> $QCELL/src/tcell.rs
    |
    |     pub fn rw<'a, T: ?Sized>(&'a mut self, tc: &'a TCell<Q, T>) -> &'a mut T {
    |            ^^
